python-compiler/tests/snapshots/lib__input__input_with_arithmetic.snap
---
source: tests/input.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@scanf_float_format_string = private unnamed_addr constant [4 x i8] c"%lf\00", align 1
@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %y = alloca i64, align 8
  %x = alloca i64, align 8
  %input_tmp = alloca double, align 8
  %scanf_call = call i32 (ptr, ...) @scanf(ptr @scanf_float_format_string, ptr %input_tmp)
  %input_value = load double, ptr %input_tmp, align 8
  %float_as_i64 = bitcast double %input_value to i64
  store i64 %float_as_i64, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %tag_bits = and i64 %x1, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float, i64 1, i64 %map_list
  %lhs_is_string = icmp eq i64 %final_tag, 3
  %both_strings = and i1 %lhs_is_string, false
  br i1 %both_strings, label %str_concat, label %arithmetic

str_concat:                                       ; preds = %entry
  %extract_ptr_payload = and i64 %x1, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %lhs_len = call i64 @strlen(ptr %payload_to_ptr)
  %rhs_len = call i64 @strlen(ptr inttoptr (i64 10 to ptr))
  %total_len = add i64 %lhs_len, %rhs_len
  %total_size = add i64 %total_len, 1
  %malloc_concat = call ptr @malloc(i64 %total_size)
  %memcpy_lhs = call ptr @memcpy(ptr %malloc_concat, ptr %payload_to_ptr, i64 %lhs_len)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  %rhs_copy_len = add i64 %rhs_len, 1
  %memcpy_rhs = call ptr @memcpy(ptr %rhs_dest, ptr inttoptr (i64 10 to ptr), i64 %rhs_copy_len)
  %ptr_to_int = ptrtoint ptr %malloc_concat to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  br label %add_merge

arithmetic:                                       ; preds = %entry
  %check_qnan2 = and i64 %x1, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float3, double %i64_to_f64, double %payload_to_f64
  %lhs_is_float = icmp eq i64 %final_tag, 1
  %result_is_float = or i1 %lhs_is_float, false
  %addtmp = fadd double %final_payload, 1.000000e+01
  %result_tag = select i1 %result_is_float, i64 1, i64 0
  %is_float_tag = icmp eq i64 %result_tag, 1
  %float_to_i64 = bitcast double %addtmp to i64
  %is_bool4 = icmp eq i64 %result_tag, 2
  %is_string5 = icmp eq i64 %result_tag, 3
  %is_list6 = icmp eq i64 %result_tag, 4
  %tag_temp1 = select i1 %is_bool4, i64 1, i64 0
  %tag_temp2 = select i1 %is_string5, i64 2, i64 %tag_temp1
  %internal_tag = select i1 %is_list6, i64 3, i64 %tag_temp2
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %tag_shifted = shl i64 %internal_tag, 48
  %with_qnan = or i64 9221120237041090560, %tag_shifted
  %nanboxed = or i64 %with_qnan, %payload_masked
  %pyobject = select i1 %is_float_tag, i64 %float_to_i64, i64 %nanboxed
  br label %add_merge

add_merge:                                        ; preds = %arithmetic, %str_concat
  %add_result = phi i64 [ %pyobject_string, %str_concat ], [ %pyobject, %arithmetic ]
  store i64 %add_result, ptr %y, align 4
  %y7 = load i64, ptr %y, align 4
  %check_qnan8 = and i64 %y7, 9221120237041090560
  %is_float9 = icmp ne i64 %check_qnan8, 9221120237041090560
  %tag_bits10 = and i64 %y7, 1970324836974592
  %tag11 = lshr i64 %tag_bits10, 48
  %is_bool12 = icmp eq i64 %tag11, 1
  %is_string13 = icmp eq i64 %tag11, 2
  %is_list14 = icmp eq i64 %tag11, 3
  %map_bool15 = select i1 %is_bool12, i64 2, i64 %tag11
  %map_string16 = select i1 %is_string13, i64 3, i64 %map_bool15
  %map_list17 = select i1 %is_list14, i64 4, i64 %map_string16
  %final_tag18 = select i1 %is_float9, i64 1, i64 %map_list17
  %check_qnan19 = and i64 %y7, 9221120237041090560
  %is_float20 = icmp ne i64 %check_qnan19, 9221120237041090560
  %i64_to_f6421 = bitcast i64 %y7 to double
  %extract_payload22 = and i64 %y7, 281474976710655
  %sign_bit23 = lshr i64 %extract_payload22, 47
  %is_negative24 = icmp eq i64 %sign_bit23, 1
  %sign_extend25 = or i64 %extract_payload22, -281474976710656
  %signed_payload26 = select i1 %is_negative24, i64 %sign_extend25, i64 %extract_payload22
  %payload_to_f6427 = sitofp i64 %signed_payload26 to double
  %final_payload28 = select i1 %is_float20, double %i64_to_f6421, double %payload_to_f6427
  %is_int = icmp eq i64 %final_tag18, 0
  %is_string29 = icmp eq i64 %final_tag18, 3
  br i1 %is_string29, label %print_string, label %check_int

check_int:                                        ; preds = %add_merge
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload28 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload28)
  br label %print_end

print_string:                                     ; preds = %add_merge
  %extract_ptr_payload30 = and i64 %y7, 281474976710655
  %payload_to_ptr31 = inttoptr i64 %extract_ptr_payload30 to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr31)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

declare i32 @scanf(ptr, ...)

declare i64 @strlen(ptr)

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i32 @printf(ptr, ...)
